--- a/web/libs/css/super.configEditor.css
+++ b/web/libs/css/super.configEditor.css
@@ -41,6 +41,7 @@
     border-radius: 5px;
     border: 1px solid #E3E3E3;
     margin-bottom: 10px;
+    font-family: monospace;
 }
 .better-json-editor [class*="json-editor-btn"].badge {
     margin: 0;
