--- a/plugins/face/faceManagerCustomAutoLoadLibrary/web/pages/blocks/super.faceManager.ejs
+++ b/plugins/face/faceManagerCustomAutoLoadLibrary/web/pages/blocks/super.faceManager.ejs
@@ -9,8 +9,10 @@
       </div>
       <div class="modal-body overflow-hidden">
           <div class="row">
-              <div class="col-8"></div>
               <div class="col-4"></div>
+              <div class="col-8" id="faceManagerImages">
+                  
+              </div>
           </div>
       </div>
     </div>
